Fixes alignment and width in popup.

--- a/src/app/popup/popup.component.scss
+++ b/src/app/popup/popup.component.scss
@@ -2,44 +2,27 @@
   width: 400px;
 }
 
-.popup-div, .popup-button:hover, .aurac-logo, .other-button-container {
+.popup-div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   background-color: rgba(249,250,251,1);
 }
 
 .aurac-logo {
-  padding: 10px 0 10px 75px;
+  padding: 10px;
+  background-color: rgba(249,250,251,1);
 }
 
 .ner-icon {
-  color: rgb(185, 119, 46);
-}
-
-
-.icon {
-  color: rgba(79,70,229,1);
-}
-
-.icon {
-  flex-shrink: 0;
-  height: 1.5rem;
-  width: 1.5rem;
-}
-
-.left-margin {
-  margin-left: 0.5rem;
-}
-
-.popup-button {
-  margin: 0 0 0.75rem 0.75rem;
-  padding: 0.15rem;
-  display: flex;
-  align-items: flex-start;
-  border-radius: 0.5rem;
+  color: rgb(226, 152, 71);
 }
 
 .ner-button-container {
   background-color: rgba(255, 255, 255,1);
   border-radius: 0.5rem;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .other-button-container {
@@ -48,32 +31,11 @@
   justify-content: space-between;
   align-items: flex-start;
   flex-direction: column;
+  background-color: rgba(249,250,251,1);
 }
 
-.button-text {
-  font-size: 1rem;
-  line-height: 1.5rem;
-  font-weight: 500;
-  color: rgba(17, 24, 39,1);
+button {
+  width: 100%;
+  margin-bottom: 3px;
 }
 
-.settings-button-svg {
-  flex-shrink: 1;
-  height: 1.5rem;
-  width: 1.5rem;
-  color: rgba(156, 163, 175,1);
-}
-
-.toggle-button-svg {
-  height: 1.25rem;
-  width: 1.25rem;
-}
-
-button.mat-button .mat-icon,
-a.mat-button .mat-icon,
-a.mat-raised-button .mat-icon,
-a.mat-flat-button .mat-icon,
-a.mat-stroked-button .mat-icon {
-  vertical-align: top;
-  font-size: 1.25em;
-}
